# LaunchLab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  LICENSE  README.md
.claude/: CLAUDE.md
backend/: .env.example  alembic.ini  config.py  database.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: de8ba8dc79b0_initial_schema_all_6_tables.py
backend/models/: __init__.py  agent_config.py  eval_case.py  eval_run.py  practice.py  simulation.py  tool_call.py
backend/prompts/: agent_system.py  judge.py
backend/routers/: agent_configs.py  dashboard.py  evals.py  practices.py  scenarios.py  simulations.py
backend/scenarios/: definitions.py
backend/schemas/: agent_config.py  agent_config_preview.py  dashboard.py  eval.py  practice.py  scenario.py  simulation.py  tool_call.py
backend/seed/: agent_defaults.py  brightcare.py  run_seed.py
backend/services/: agent_config_service.py  eval_runner.py  judge.py  judge_rubrics.py  orchestrator.py  patient_simulator.py  practice_service.py  readiness.py  readiness_export.py  simulation_service.py  tool_executor.py
backend/tools/: appointment_slots.py  base.py  billing_route.py  callback_request.py  clinic_hours.py  definitions.py  insurance_check.py  mock_data.py  provider_availability.py
docs/: architecture-diagram.md  demo-script.md  deployment.md  launchlab-implementation-checklist.md  launchlab-technical-architecture.md  launchlab-v1-scope.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  portfolio-summary.md  tradeoffs.md
frontend/: index.html  (+2 more)
(+56 files in other folders)
